baseline/main/perl-socket/perl-socket-2.038-r1.log
>>> perl-socket: Validating /home/packager/oily-pine/main/perl-socket/APKBUILD...
>>> perl-socket: Cleaning up srcdir
>>> perl-socket: Cleaning up pkgdir
>>> perl-socket: Cleaning up tmpdir
>>> perl-socket: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/Socket-2.038.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100 46073  100 46073    0     0   169k      0 --:--:-- --:--:-- --:--:--  170k
>>> perl-socket: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/Socket-2.038.tar.gz
>>> perl-socket: Checking sha512sums...
Socket-2.038.tar.gz: OK
>>> perl-socket: Preparing build chroot...
fetch http://dl-cdn.alpinelinux.org/alpine/edge/main/x86_64/APKINDEX.tar.gz
(1/75) Installing musl (1.2.5-r10)
(2/75) Installing libcrypto3 (3.5.0-r0)
(3/75) Installing ca-certificates-bundle (20241121-r2)
(4/75) Installing libssl3 (3.5.0-r0)
(5/75) Installing zlib (1.3.1-r2)
(6/75) Installing libapk2 (2.14.9-r2)
(7/75) Installing apk-tools (2.14.9-r2)
(8/75) Installing libcap2 (2.76-r0)
(9/75) Installing libcap-getcap (2.76-r0)
(10/75) Installing fakeroot (1.37.1.1-r0)
(11/75) Installing scanelf (1.3.8-r1)
(12/75) Installing musl-utils (1.2.5-r10)
(13/75) Installing libgcc (14.3.0-r0)
(14/75) Installing libstdc++ (14.3.0-r0)
(15/75) Installing lzip (1.25-r0)
(16/75) Installing openssl (3.5.0-r0)
(17/75) Installing patch (2.8-r0)
(18/75) Installing pkgconf (2.4.3-r0)
(19/75) Installing acl-libs (2.3.2-r1)
(20/75) Installing tar (1.35-r3)
(21/75) Installing busybox (1.37.0-r18)
Executing busybox-1.37.0-r18.post-install
(22/75) Installing ssl_client (1.37.0-r18)
(23/75) Installing busybox-binsh (1.37.0-r18)
(24/75) Installing abuild (3.15.0-r0)
Executing abuild-3.15.0-r0.pre-install
(25/75) Installing abuild-sudo (3.15.0-r0)
(26/75) Installing alpine-baselayout-data (3.7.0-r0)
(27/75) Installing alpine-baselayout (3.7.0-r0)
Executing alpine-baselayout-3.7.0-r0.pre-install
Executing alpine-baselayout-3.7.0-r0.post-install
(28/75) Installing bridge (1.5-r5)
(29/75) Installing ifupdown-ng (0.12.1-r7)
(30/75) Installing openrc-user (0.62.2-r2)
(31/75) Installing openrc (0.62.2-r2)
Executing openrc-0.62.2-r2.post-install
(32/75) Installing mdev-conf (4.8-r0)
(33/75) Installing busybox-mdev-openrc (1.37.0-r18)
(34/75) Installing alpine-conf (3.20.0-r0)
(35/75) Installing alpine-keys (2.5-r0)
(36/75) Installing alpine-release (3.22.0-r0)
(37/75) Installing busybox-openrc (1.37.0-r18)
(38/75) Installing busybox-suid (1.37.0-r18)
(39/75) Installing alpine-base (3.22.0-r0)
(40/75) Installing jansson (2.14.1-r0)
(41/75) Installing zstd-libs (1.5.7-r0)
(42/75) Installing binutils (2.44-r0)
(43/75) Installing libmagic (5.46-r2)
(44/75) Installing file (5.46-r2)
(45/75) Installing libgomp (14.3.0-r0)
(46/75) Installing libatomic (14.3.0-r0)
(47/75) Installing gmp (6.3.0-r3)
(48/75) Installing isl26 (0.26-r1)
(49/75) Installing mpfr4 (4.2.1_p1-r0)
(50/75) Installing mpc1 (1.3.1-r1)
(51/75) Installing gcc (14.3.0-r0)
(52/75) Installing libstdc++-dev (14.3.0-r0)
(53/75) Installing musl-dev (1.2.5-r10)
(54/75) Installing g++ (14.3.0-r0)
(55/75) Installing make (4.4.1-r3)
(56/75) Installing fortify-headers (1.1-r5)
(57/75) Installing build-base (0.5-r3)
(58/75) Installing brotli-libs (1.1.0-r2)
(59/75) Installing c-ares (1.34.5-r0)
(60/75) Installing libunistring (1.3-r0)
(61/75) Installing libidn2 (2.3.7-r0)
(62/75) Installing nghttp2-libs (1.65.0-r0)
(63/75) Installing libpsl (0.21.5-r3)
(64/75) Installing libcurl (8.14.0-r2)
(65/75) Installing libexpat (2.7.1-r0)
(66/75) Installing pcre2 (10.43-r1)
(67/75) Installing git (2.49.0-r0)
(68/75) Installing git-init-template (2.49.0-r0)
(69/75) Installing libbz2 (1.0.8-r6)
(70/75) Installing perl (5.40.2-r0)
(71/75) Installing perl-error (0.17030-r0)
(72/75) Installing perl-git (2.49.0-r0)
(73/75) Installing git-perl (2.49.0-r0)
(74/75) Installing perl-utils (5.40.2-r0)
(75/75) Installing perl-dev (5.40.2-r0)
Executing busybox-1.37.0-r18.trigger
OK: 305 MiB in 75 packages
>>> perl-socket: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/Socket-2.038.tar.gz
>>> perl-socket: Checking sha512sums...
Socket-2.038.tar.gz: OK
>>> perl-socket: Unpacking /var/cache/distfiles/Socket-2.038.tar.gz...
Checking HAS_SOCKADDR_SA_LEN...
test-0.c: In function 'main':
test-0.c:17:29: error: 'struct sockaddr' has no member named 'sa_len'
   17 |     { struct sockaddr sa; sa.sa_len = 0; }
      |                             ^
Checking I_NETINET_IP...
Checking if your kit is complete...
Looks good
Generating a Unix-style Makefile
Writing Makefile for Socket
Writing MYMETA.yml and MYMETA.json
Running Mkbootstrap for Socket ()
"/usr/bin/perl" "/usr/share/perl5/core_perl/ExtUtils/xsubpp" -noprototypes -typemap '/usr/share/perl5/core_perl/ExtUtils/typemap' -typemap '/tmp/src/Socket-2.038/typemap'  Socket.xs > Socket.xsc
chmod 644 "Socket.bs"
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
cp Socket.pm blib/lib/Socket.pm
mv Socket.xsc Socket.c
cc -c   -D_REENTRANT -D_GNU_SOURCE -D_GNU_SOURCE -fwrapv -fno-strict-aliasing -pipe -fstack-protector-strong -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fstack-clash-protection -Wformat -Werror=format-security -fno-plt -O2   -DVERSION=\"2.038\" -DXS_VERSION=\"2.038\" -fPIC "-I/usr/lib/perl5/core_perl/CORE"  -DI_NETINET_IP Socket.c
rm -f blib/arch/auto/Socket/Socket.so
cc  -shared -Os -fstack-clash-protection -Wformat -Werror=format-security -fno-plt -O2 -L/usr/local/lib -fstack-protector-strong  Socket.o  -o blib/arch/auto/Socket/Socket.so  \
      \
  
chmod 755 blib/arch/auto/Socket/Socket.so
Manifying 1 pod document
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
PERL_DL_NONLAZY=1 "/usr/bin/perl" "-MExtUtils::Command::MM" "-MTest::Harness" "-e" "undef *Test::Harness::Switches; test_harness(0, 'blib/lib', 'blib/arch')" t/*.t
t/getaddrinfo.t .. ok
t/getnameinfo.t .. ok
t/ip_mreq.t ...... ok
t/ipv6_mreq.t .... ok
t/sockaddr.t ..... ok
t/Socket.t ....... ok
t/socketpair.t ... ok
All tests successful.
Files=7, Tests=153, 23 wallclock secs ( 0.01 usr  0.00 sys +  0.22 cusr  0.04 csys =  0.27 CPU)
Result: PASS
>>> perl-socket: Entering fakeroot...
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
Manifying 1 pod document
Files found in blib/arch: installing files in blib/lib into architecture dependent library tree
Installing /tmp/pkg/perl-socket/usr/lib/perl5/vendor_perl/auto/Socket/Socket.so
Installing /tmp/pkg/perl-socket/usr/lib/perl5/vendor_perl/Socket.pm
Installing /tmp/pkg/perl-socket/usr/share/man/man3/Socket.3pm
>>> perl-socket*: Running postcheck for perl-socket
>>> perl-socket*: Preparing package perl-socket...
>>> perl-socket*: Stripping binaries
>>> perl-socket*: Scanning shared objects
>>> perl-socket*: Tracing dependencies...
	perl
	so:libc.musl-x86_64.so.1
>>> perl-socket*: Package size: 83.2 KB
>>> perl-socket*: Compressing data...
>>> perl-socket*: Create checksum...
>>> perl-socket*: Create perl-socket-2.038-r1.apk
>>> perl-socket: Updating the main/x86_64 repository index...
>>> perl-socket: Signing the index...
>>> perl-socket: Cleaning up srcdir
>>> perl-socket: Cleaning up build chroot
>>> perl-socket: Cleaning up pkgdir
